# metacpu

./: CMakeLists.txt  README.md
assembler/: CMakeLists.txt  assembler.cpp  assembler.h  bin_tree.h  instruction.h  main.cpp  token.h  tokenizer.cpp  tokenizer.h  tools.h
assembler/samples/: hello_world.asm  ret_from_sub.asm  sample.asm
circuits/: metacpu.circ
common/: bin_tree.h  errors.h
interp/: main.go
interp/cpp/: CMakeLists.txt  instructions.h  main.cpp  vm.cpp  vm.h
interp/go/: go.mod
interp/go/vm/: utils.c  utils.h  vm.go
samples/: sample.asm
tests/: CMakeLists.txt  bin_tree_test.cpp
